type shyt!